plugins {
	id 'java'
	id 'application'
	id 'org.openjfx.javafxplugin' version '0.0.13'
	id 'org.javamodularity.moduleplugin' version "1.8.15"
	id 'org.beryx.jlink'  version "3.1.1"
}

group = 'app.dns'
version = '1.0-SNAPSHOT'

repositories {
	mavenCentral()
}

sourceCompatibility = '17'
targetCompatibility = '17'

dependencies {
	implementation 'org.jfree:jfreechart:1.5.5'
	implementation 'org.openjfx:javafx-controls:17.0.15'
	implementation 'org.openjfx:javafx-fxml:17.0.15'
	implementation 'org.apache.logging.log4j:log4j-core:2.24.1'
	implementation 'dnsjava:dnsjava:3.6.3'

	testImplementation(platform('org.junit:junit-bom:5.12.2'))
	testImplementation('org.junit.jupiter:junit-jupiter')
	testRuntimeOnly('org.junit.platform:junit-platform-launcher')
}

javafx {
	version = '17.0.15'
	modules = ['javafx.controls', 'javafx.fxml']
}

test {
	useJUnitPlatform()
}

mainClassName = 'app.dns.MainApp'

jlink {
	options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
	launcher {
		name = 'app.dns'
	}
}
